--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,5 @@ dependencies {
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation deps.rx.rxjava2
     implementation deps.rx.rx_android
+    implementation 'com.airbnb.android:lottie:2.7.0'
 }
