--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,21 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+
+
+PROJ_GROUP=com.hello7890
+PROJ_VERSION=1.0.0
+PROJ_VERSION_DESC=No release note left.
+PROJ_NAME=RecyclerViewAdapter
+PROJ_ARTIFACTID=recyclerview-adapter
+PROJ_DESCRIPTION=Better Adapter.
+PROJ_WEBSITEURL=https://github.com/qianjujun/EvaFrame
+PROJ_VCSURL=git@github.com:qianjujun/EvaFrame.git
+PROJ_ISSUETRACKERURL=https://github.com/qianjujun/EvaFrame/issues
+PROJ_LICENSE=MIT
+PROJ_LICENSE_URL=https://raw.githubusercontent.com/celerysoft/MaterialDesignDialog/master/LICENSE
+
+DEVELOPER_ID=qianjujun
+DEVELOPER_NAME=JuJun Qian
+DEVELOPER_EMAIL=qianjujun@163.com
+
