--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,4 @@ rootProject.name='EvaFrame'
 include ':frame', ':arouter-api', ':app',':adapter', ':lib'
 include ':photo'
 include ':album'
-include ':mediatools'
+//include ':mediatools'
