--- a/photo/build.gradle
+++ b/photo/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation 'com.hello7890:recyclerview-adapter:1.0.0'
 }
