--- a/adapter/build.gradle
+++ b/adapter/build.gradle
@@ -1,11 +1,12 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -39,29 +40,31 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.core:core-ktx:1.2.0'
 }
 
 
 /** 以下开始是将Android Library上传到jcenter的相关配置**/
-apply plugin: 'com.novoda.bintray-release'//添加
-//项目主页
-def siteUrl = 'https://github.com/qianjujun/EvaFrame'
-publish{
-    repoName = 'recyclerview-adapter'//远程仓库名字,不指明，默认是上传到maven
-    userOrg = 'qianjujun2020'//bintray.com的用户名
-    groupId = 'com.hello7890'//jcenter上的路径
-    artifactId = 'recyclerview-adapter'//项目名称
-    publishVersion = '1.0.0'//版本号
-    desc = '一个Adapter'//描述，不重要
-    website = siteUrl//项目主页
-}
-tasks.withType(Javadoc) {//防止编码问题
-    options.addStringOption('Xdoclint:none', '-quiet')
-    options.addStringOption('encoding', 'UTF-8')
-    options.addStringOption('charSet', 'UTF-8')
-}
+//apply plugin: 'com.novoda.bintray-release'//添加
+////项目主页
+//def siteUrl = 'https://github.com/qianjujun/EvaFrame'
+//publish{
+//    repoName = 'recyclerview-adapter'//远程仓库名字,不指明，默认是上传到maven
+//    userOrg = 'qianjujun2020'//bintray.com的用户名
+//    groupId = 'com.hello7890'//jcenter上的路径
+//    artifactId = 'recyclerview-adapter'//项目名称
+//    publishVersion = '1.0.0'//版本号
+//    desc = '一个Adapter'//描述，不重要
+//    website = siteUrl//项目主页
+//}
+//tasks.withType(Javadoc) {//防止编码问题
+//    options.addStringOption('Xdoclint:none', '-quiet')
+//    options.addStringOption('encoding', 'UTF-8')
+//    options.addStringOption('charSet', 'UTF-8')
+//}
