--- a/arouter-api/build.gradle
+++ b/arouter-api/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 ext {
     bintrayName = 'arouter-api'
@@ -42,6 +43,12 @@ dependencies {
     annotationProcessor 'com.alibaba:arouter-compiler:1.2.2'
     api 'com.alibaba:arouter-annotation:1.0.6'
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
+    mavenCentral()
 }
 
 //apply from: '../install.gradle'
