--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.4.30-M1'
     ext.kotlin_version = '1.3.61'
     apply from: 'config.gradle'
     repositories {
         google()
         jcenter()
         maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
+        maven { url 'https://dl.bintray.com/kotlin/kotlin-eap' }
 
     }
     dependencies {
